--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <header>
         <img class="logo" src="/dist/img/manieklogoNB.png" alt="logo">
-        <video class="mobile" src="./src/img/mobile3mb.mp4" muted loop autoplay></video>
-        <video class="desktop" src="./dist/img/ManiekVid1.mp4" muted loop autoplay></video>
+        <video class="mobile" src="../dist/img/mobile3mb.mp4" muted loop autoplay></video>
+        <video class="desktop" src="../dist/img/ManiekVid1.mp4" muted loop autoplay></video>
         <div class="overlay"></div>
         <div class="text">
             <h1>Rejsy Motorówką ze Sternikiem</h1>
@@ -62,7 +62,7 @@
                 <h2 class="section-heading">Nasza Flota</h2>
                 <div class="about__box">
                     <div class="about__box-img">
-                        <img src="./dist/img/maniekCip.jpeg" alt="Beryliner Łódz" class="about__img1">
+                        <img src="../dist/img/maniekCip.jpeg" alt="Beryliner Łódz" class="about__img1">
                     </div>
                     <div class="about__box-text about__box-text--left">
                         <h3 class="about__title">Kapitan Maniek</h3>
@@ -72,7 +72,7 @@
                 </div>
                 <div class="about__box about__box--right">
                     <div class="about__box-img about__box-img--right">
-                        <img src="./dist/img/maniekCip2.jpg" alt="Beryliner Łódz" class="about__img2">
+                        <img src="../dist/img/maniekCip2.jpg" alt="Beryliner Łódz" class="about__img2">
                     </div>
                     <div class="about__box-text about__box-text--right">
                         <h3 class="about__title">Bayliner Liberty 770</h3>
