--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <header>
         <img class="logo" src="/dist/img/manieklogoNB.png" alt="logo">
-        <video class="mobile" src="../dist/img/mobile3mb.mp4" muted loop autoplay></video>
-        <video class="desktop" src="../dist/img/ManiekVid1.mp4" muted loop autoplay></video>
+        <video class="mobile" src="./dist/img/mobile3mb.mp4" muted loop autoplay></video>
+        <video class="desktop" src="./dist/img/ManiekVid1.mp4" muted loop autoplay></video>
         <div class="overlay"></div>
         <div class="text">
             <h1>Rejsy Motorówką ze Sternikiem</h1>
