--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <h2 class="section-heading">Nasza Flota</h2>
                 <div class="about__box">
                     <div class="about__box-img">
-                        <img src="./dist/img/maniekCip.jpeg" alt="Beryliner Łódz" class="about__img1">
+                        <img src="./dist/img/maniekCip.jpg" alt="Beryliner Łódz" class="about__img1">
                     </div>
                     <div class="about__box-text about__box-text--left">
                         <h3 class="about__title">Kapitan Maniek</h3>
